// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`appointment-details-component it renders rescheduled appointment details correctly 1`] = `
<div>
  <div
    class="mtfh-box"
  >
    <div
      class="mtfh-status-heading"
    >
      <svg
        fill="none"
        height="45"
        viewBox="0 0 45 45"
        width="45"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="22.5"
          cy="22.5"
          fill="white"
          r="21.75"
          stroke="#0B0C0C"
          stroke-width="1.5"
        />
        <path
          d="M20.2251 12.7026C20.2251 11.1991 21.0627 10.4473 22.7378 10.4473C24.4129 10.4473 25.2505 11.1991 25.2505 12.7026C25.2505 13.4191 25.0386 13.9792 24.6147 14.3828C24.201 14.7764 23.5754 14.9731 22.7378 14.9731C21.0627 14.9731 20.2251 14.2163 20.2251 12.7026ZM25.0386 34H20.4219V17.0771H25.0386V34Z"
          fill="#0B0C0C"
        />
      </svg>
      <h4
        class="lbh-heading-h4 mtfh-status-heading__title"
      >
        Office appointment missed
      </h4>
    </div>
    <p
      class="lbh-body-m"
      style="margin-left: 60px;"
    >
      Date:
       
      Tuesday 12th October 2010
      <br />
      Time:
       
      08:59 am
    </p>
  </div>
  <div
    class="mtfh-box"
  >
    <div
      class="mtfh-status-heading"
    >
      <svg
        fill="none"
        height="45"
        viewBox="0 0 45 45"
        width="45"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="22.5"
          cy="22.5"
          fill="white"
          r="21.75"
          stroke="#0B0C0C"
          stroke-width="1.5"
        />
        <path
          d="M20.2251 12.7026C20.2251 11.1991 21.0627 10.4473 22.7378 10.4473C24.4129 10.4473 25.2505 11.1991 25.2505 12.7026C25.2505 13.4191 25.0386 13.9792 24.6147 14.3828C24.201 14.7764 23.5754 14.9731 22.7378 14.9731C21.0627 14.9731 20.2251 14.2163 20.2251 12.7026ZM25.0386 34H20.4219V17.0771H25.0386V34Z"
          fill="#0B0C0C"
        />
      </svg>
      <h4
        class="lbh-heading-h4 mtfh-status-heading__title"
      >
        Office appointment scheduled
      </h4>
    </div>
    <p
      class="lbh-body-m"
      style="margin-left: 60px;"
    >
      Date: 
      Monday 12th October 2099
      <br />
      Time: 
      08:59 am
    </p>
    <button
      class="govuk-link lbh-link"
      style="margin-left: 60px;"
      type="button"
    >
      Change
    </button>
  </div>
</div>
`;

exports[`appointment-details-component it renders scheduled appointment details correctly 1`] = `
<div>
  <div
    class="mtfh-box"
  >
    <div
      class="mtfh-status-heading"
    >
      <svg
        fill="none"
        height="45"
        viewBox="0 0 45 45"
        width="45"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="22.5"
          cy="22.5"
          fill="white"
          r="21.75"
          stroke="#0B0C0C"
          stroke-width="1.5"
        />
        <path
          d="M20.2251 12.7026C20.2251 11.1991 21.0627 10.4473 22.7378 10.4473C24.4129 10.4473 25.2505 11.1991 25.2505 12.7026C25.2505 13.4191 25.0386 13.9792 24.6147 14.3828C24.201 14.7764 23.5754 14.9731 22.7378 14.9731C21.0627 14.9731 20.2251 14.2163 20.2251 12.7026ZM25.0386 34H20.4219V17.0771H25.0386V34Z"
          fill="#0B0C0C"
        />
      </svg>
      <h4
        class="lbh-heading-h4 mtfh-status-heading__title"
      >
        Office appointment scheduled
      </h4>
    </div>
    <p
      class="lbh-body-m"
      style="margin-left: 60px;"
    >
      Date: 
      Monday 12th October 2099
      <br />
      Time: 
      08:59 am
    </p>
    <button
      class="govuk-link lbh-link"
      style="margin-left: 60px;"
      type="button"
    >
      Change
    </button>
  </div>
</div>
`;
